	Fixed bug where BR elements wasn't removed from PRE elements when apply_source_formatting was enabled.
	Fixed bug where JS errors where thrown in IE if TinyMCE was placed in a frameset.
	Fixed bug where devkit reported errors if TinyMCE was places in a frameset.
	Fixed bug where auto_focus option didn't work in IE.
	Fixed bug where FF leaked memory on some event handlers.
	Fixed issue where select elements where disabled if AJAX or custom submit triggers where used.
	Fixed issue where formatblock command could insert invalid elements.
	Fixed issue with duplicate default rules for abbr in valid_elements.
	Fixed issue where the devkit wasn't the frontmost layer all the time.
Version 2.0.7 (2006-10-17)
	Added new visualchars plugin. Enables users to see custom chars like &nbsp;.
	Added new nonbreaking plugin. Enables users to insert &nbsp; characters.
	Added new devkit plugin. Gives TinyMCE developers more information.
	Added new xhtmlxtras plugin. Based on work contributed by Andrew Tetlaw.
	Added new text and hilite color picker layers to the advanced theme.
	Added new media plugin, this handles flash, quicktime, windows media player, real player.
	Added new valid_child_elements option. Enables you to remove non valid child nodes from parents.
	Added new required attribute flag to the valid_elements option.
	Added new popup_css add option. Enables you to add an additional css to all popups.
	Added new table_default_border, table_default_cellpadding, table_default_cellspacing options to table plugin.
	Added new RegExp support for editor_selector/editor_deselector options.
	Added new validation class. Implemented in various dialogs.
	Added new createTag and createTagHTML methods to the API.
	Added new shortcut keys for h1-h6,p,div,address elements by keys Ctrl+1-9.
	Added lightbox, nofollow and tag as possible rel attribute values in the advlink dialog.
	Added new table delete control for the table plugin.